--- a/bower.json
+++ b/bower.json
@@ -8,8 +8,10 @@
   ],
   "dependencies": {
     "angular": "~1.4.8",
+    "angular-messages": "~1.4.8",
     "angular-resource": "~1.4.8",
     "angular-route": "~1.4.8",
+    "angular-sanitize": "~1.4.8",
     "bootstrap": "~3.3.6"
   }
 }
