--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "^4.13.3",
-    "serve-favicon": "^2.3.0",
-    "morgan": "^1.6.1",
-    "cookie-parser": "^1.3.3",
+    "async": "^1.5.0",
     "body-parser": "^1.13.3",
-    "ejs": "^2.3.1"
+    "cookie-parser": "^1.3.3",
+    "docusign-node": "^7.1.0",
+    "ejs": "^2.3.1",
+    "express": "^4.13.3",
+    "moment": "^2.10.6",
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
